@startuml Hardware Store Database Schema
' INOVEXAHUB - Système de Gestion Commerciale et Point de Vente (POS)
' Sprint 1: Modélisation UML - Database Schema
' Version: 2.0 (ProductBatch, ProductVariant, Delivery Fee)
' Database: PostgreSQL

skinparam linetype ortho
skinparam entity {
  BackgroundColor<<FK>> LightBlue
  BorderColor<<FK>> Blue
}

' ============================================
' TABLES
' ============================================

entity users {
  id BIGSERIAL PK
  first_name VARCHAR(50)
  last_name VARCHAR(50)
  email VARCHAR(100) UNIQUE CHECK (email = LOWER(email))
  password VARCHAR
  role VARCHAR(20)
  enabled BOOLEAN
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

entity clients {
  id BIGSERIAL PK
  version BIGINT
  name VARCHAR(100)
  phone VARCHAR(20)
  email VARCHAR(100)
  address VARCHAR(255)
  tax_identification_number VARCHAR(50)
  credit_limit DECIMAL(19,3)
  current_debt DECIMAL(19,3)
  deleted BOOLEAN
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

entity suppliers {
  id BIGSERIAL PK
  name VARCHAR(100)
  phone VARCHAR(20)
  email VARCHAR(100)
  address VARCHAR(255)
  tax_identification_number VARCHAR(50)
  contact_person VARCHAR(100)
  payment_terms VARCHAR(100)
  notes VARCHAR(500)
  deleted BOOLEAN
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

entity products {
  id BIGSERIAL PK
  version BIGINT
  reference VARCHAR(50) UNIQUE
  name VARCHAR(100)
  description VARCHAR(500)
  image TEXT
  category VARCHAR(50)
  unit_type VARCHAR(20)
  base_unit VARCHAR(20)
  stock_quantity DECIMAL(19,3)
  average_purchase_price DECIMAL(19,3)
  unit_price DECIMAL(19,3)
  supplier_id BIGINT FK
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

entity product_variants {
  id BIGSERIAL PK
  version BIGINT
  product_id BIGINT FK
  sku VARCHAR(50) UNIQUE
  variant_name VARCHAR(100)
  attributes TEXT
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

entity product_conditionings {
  id BIGSERIAL PK
  product_id BIGINT FK
  description VARCHAR(100)
  quantity_per_unit DECIMAL(19,3)
  unit_price DECIMAL(19,3)
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

entity product_batches {
  id BIGSERIAL PK
  version BIGINT
  product_id BIGINT FK
  variant_id BIGINT FK
  quantity DECIMAL(19,3)
  unit_cost DECIMAL(19,3)
  unit_price DECIMAL(19,3)
  supplier_id BIGINT FK
  notes VARCHAR(500)
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

entity documents {
  id BIGSERIAL PK
  version BIGINT
  document_number VARCHAR(50) UNIQUE
  date TIMESTAMP
  document_type VARCHAR(20)
  status VARCHAR(20)
  client_id BIGINT FK
  user_id BIGINT FK
  total_excluding_tax DECIMAL(19,3)
  vat_rate DECIMAL(5,2)
  total_vat DECIMAL(19,3)
  total_including_tax DECIMAL(19,3)
  is_delivery BOOLEAN
  transport_fee DECIMAL(19,3)
  stamp_duty DECIMAL(19,3)
  is_credit_sale BOOLEAN
  converted_to_invoice_id BIGINT
  source_delivery_note_id BIGINT
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

entity document_lines {
  id BIGSERIAL PK
  document_id BIGINT FK
  product_id BIGINT FK
  variant_id BIGINT FK
  line_number INTEGER
  conditioning_description VARCHAR(100)
  conditioning_quantity_per_unit DECIMAL(19,3)
  batch_allocations TEXT
  quantity DECIMAL(19,3)
  unit_price DECIMAL(19,3)
  unit_cost DECIMAL(19,3)
  total_line_excluding_tax DECIMAL(19,3)
  total_line_including_tax DECIMAL(19,3)
  is_delivered BOOLEAN
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

entity payment_receipts {
  id BIGSERIAL PK
  receipt_number VARCHAR(50) UNIQUE
  client_id BIGINT FK
  user_id BIGINT FK
  amount_paid DECIMAL(19,3)
  payment_date TIMESTAMP
  payment_method VARCHAR(20)
  previous_debt DECIMAL(19,3)
  new_debt DECIMAL(19,3)
  credit_history_id BIGINT FK
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

entity credit_history {
  id BIGSERIAL PK
  client_id BIGINT FK
  document_id BIGINT FK
  payment_receipt_id BIGINT FK
  transaction_type VARCHAR(20)
  amount DECIMAL(19,3)
  running_balance DECIMAL(19,3)
  deleted BOOLEAN
  entry_date TIMESTAMP
}

entity audit_logs {
  id BIGSERIAL PK
  user_id BIGINT /* optional identity snapshot, no FK */
  email VARCHAR(100)
  action VARCHAR(100)
  entity_type VARCHAR(50)
  entity_id BIGINT
  details TEXT
  timestamp TIMESTAMP
}

note right of audit_logs
  user_id: OPTIONAL identity snapshot (nullable, no FK)
  email: snapshot of the user's email at action time
  Audit rows may lack a user or outlive a deleted user
end note

entity refresh_tokens {
  id BIGSERIAL PK
  token_hash VARCHAR(64) UNIQUE
  user_id BIGINT FK
  expires_at TIMESTAMP
  revoked BOOLEAN
  created_at TIMESTAMP
}

entity access_tokens {
  id BIGSERIAL PK
  token_hash VARCHAR(64) UNIQUE
  user_id BIGINT FK
  expires_at TIMESTAMP
  revoked BOOLEAN
  created_at TIMESTAMP
}

entity password_reset_tokens {
  id BIGSERIAL PK
  user_id BIGINT FK
  email VARCHAR(100) INDEX
  otp_code_hash VARCHAR(100) /* BCrypt hashed */
  expires_at TIMESTAMP
  used BOOLEAN
  failed_attempts INTEGER
  created_at TIMESTAMP
}

note bottom of password_reset_tokens
  Partial unique index idx_prt_active_user:
  at most one active (unused) token per user
  otp_code_hash: stored as BCrypt hash, never plaintext
end note

' ============================================
' FOREIGN KEY RELATIONSHIPS
' ============================================

products }o--o| suppliers : "supplier_id"
product_variants }o--|| products : "product_id"
product_conditionings }o--|| products : "product_id"
product_batches }o--|| products : "product_id"
product_batches }o--o| product_variants : "variant_id"
product_batches }o--o| suppliers : "supplier_id"
documents }o--o| clients : "client_id"
documents }o--o| users : "user_id"
document_lines }o--|| documents : "document_id"
document_lines }o--o| products : "product_id"
document_lines }o--o| product_variants : "variant_id"
payment_receipts }o--|| clients : "client_id"
payment_receipts }o--o| users : "user_id"
credit_history }o--|| clients : "client_id"
credit_history }o--o| documents : "document_id"
credit_history }o--o| payment_receipts : "payment_receipt_id"
refresh_tokens }o--|| users : "user_id"
access_tokens }o--|| users : "user_id"
password_reset_tokens }o--|| users : "user_id"

' ============================================
' NOTES
' ============================================

note right of products
  - reference indexed for fast POS scanning (< 500ms)
  - Supports decimal quantities for WEIGHT, LENGTH, VOLUME
  - image stored as base64 encoded string
  - unit_price: default selling price
end note

note right of product_variants
  - Multi-SKU variants with flexible JSON attributes
  - Supports caliber, material, color, etc.
  - sku: unique stock-keeping unit identifier
end note

note right of product_batches
  - FIFO inventory tracking per batch
  - Tracks unit_cost (purchase) and unit_price (selling)
  - Optional variant_id for variant-level batches
  - Composite indexes for efficient FIFO allocation
end note

note right of documents
  - SINGLE_TABLE inheritance: QUOTE, DELIVERY_NOTE, INVOICE
  - is_delivery: controls transport fee application
  - transport_fee: nullable, only set when is_delivery = TRUE
  - stamp_duty default: 1.000 DT (INVOICE)
  - vat_rate default: 19.00%
end note

note right of credit_history
  - IMMUTABLE audit table
  - Soft delete only (deleted flag)
  - amount: Positive for debt increase, Negative for payments
end note

@enduml
